--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines":{
+  "engines": {
     "node": "16.16.0",
-    "npm":"8.11.0"
+    "npm": "8.11.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +21,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.0",
+    "node-localstorage": "^2.2.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "stripe": "^11.5.0",
